--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.3",
     "formik": "^2.2.9",
+    "formik-antd": "^2.0.4",
     "react": "^17.0.2",
     "react-apple-emojis": "^2.1.1",
     "react-dom": "^17.0.2",
